Create list items withe the array items

--- a/index.html
+++ b/index.html
@@ -17,21 +17,27 @@
   <form>
     <div class="form-group">
       <label for="favoritemusic">Favorite Music</label>
-      <input type="music" class="form-control" id="favoritemusic" placeholder="Favorite music...">
+      <input type="music" class="form-control" id="favorite-music" placeholder="Favorite music...">
     </div>
 
     <div class="form-group">
       <label for="favoriteanimal">Favorite Animal</label>
-      <input type="animal" class="form-control" id="favoriteanimal" placeholder="Favorite animal...">
+      <input type="animal" class="form-control" id="favorite-animal" placeholder="Favorite animal...">
     </div>
 
     <div class="form-group">
       <label for="favoritesport">Favorite Sport</label>
-      <input type="sport" class="form-control" id="favoritesport" placeholder="Favorite sport...">
+      <input type="sport" class="form-control" id="favorite-sport" placeholder="Favorite sport...">
     </div>
 
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
+</br>
+
+     <ul id="favoritethings">
+     </ul>
+
+
 
     </div>
   </body>
